kubernetes/apps/observability/tempo/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tempo-write
  labels:
    app: tempo-write
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tempo.cloud.witl.xyz
spec:
  parentRefs:
    - name: istio
      namespace: istio-ingress
      sectionName: https
  hostnames:
    - tempo.cloud.witl.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/traces
      backendRefs:
        - name: tempo-distributor
          port: 4318
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tempo-ready
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tempo.cloud.witl.xyz
spec:
  parentRefs:
    - name: istio
      namespace: istio-ingress
      sectionName: https
  hostnames:
    - tempo.cloud.witl.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ready
      backendRefs:
        - name: tempo-query-frontend
          port: 3200
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tempo-read
  labels:
    app: tempo
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tempo.cloud.witl.xyz
spec:
  parentRefs:
    - name: istio
      namespace: istio-ingress
      sectionName: https
  hostnames:
    - tempo.cloud.witl.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: tempo-query-frontend
          port: 3200
